app/_attachments/css/tangerine.less
/* ... */
/*
 * Consistent box sizing and appearance
 */

input[type="checkbox"], input[type="radio"] { box-sizing: border-box; padding: 0; }
input[type="search"] { -webkit-appearance: textfield; -moz-box-sizing: content-box; -webkit-box-sizing: content-box; box-sizing: content-box; }
input[type="search"]::-webkit-search-decoration { -webkit-appearance: none; }

/*
 * Remove inner padding and border in FF3/4: h5bp.com/l
 */

button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }

/*
 * 1. Remove default vertical scrollbar in IE6/7/8/9
 * 2. Allow only vertical resizing
 */

/*
textarea { overflow: auto; vertical-align: top; resize: vertical; }
*/

/* Colors for form validity */
input:valid, textarea:valid {  }
input:invalid, textarea:invalid { background-color: #f0dddd; }


/* =============================================================================
   Tables
   ========================================================================== */

table { border-collapse: collapse; border-spacing: 0; }
td { vertical-align: top; }


/* ==|== primary styles =====================================================
   Author:
   ========================================================================== */



/* ==|== non-semantic helper classes ========================================
   Please define your styles before this section.
   ========================================================================== */

/* prevent callout */
.nocallout {-webkit-touch-callout: none;}

/* Text overflow with ellipsis */
.ellipsis {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

/* A hack for HTML5 contenteditable attribute on mobile */
textarea[contenteditable] {-webkit-appearance: none;}

/* A workaround for S60 3.x and 5.0 devices which do not animated gif images if they have been set as display: none */
.gifhidden {position: absolute; left: -100%;}

/* For image replacement */
.ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; }
.ir br { display: none; }

/* Hide from both screenreaders and browsers: h5bp.com/u */
.hidden { display: none !important; visibility: hidden; }

/* Hide only visually, but have it available for screenreaders: h5bp.com/v */
.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }

/* Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: h5bp.com/p */
.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }

/* Hide visually and from screenreaders, but maintain layout */
.invisible { visibility: hidden; }

/* Contain floats: h5bp.com/q */
.clearfix:before, .clearfix:after { content: ""; display: table; }
.clearfix:after { clear: both; }
.clearfix { *zoom: 1; }




/*
 * Tangerine
 */

@grey:        #666;

@blue:        #6DAED9;
@yellow:      #F7C942;
@orange:      #f2672c;
@orangerind:  #f6e97f;
@flash_color: red;

@menu_big:   20px;
@menu_small: 20px;

@h1: 25px;
@h2: 20px;
@h3: 15px;
@h4: 15px;

@radius: 10px;

@htop: 10px;
@hside: 0;
@hbottom: 5px;

@orange-1: #F26F10;
@orange-2: #F49B00;
@orange-3: #F6C637;
@orange-4: #F6EF9A;
@grey: #888;

@concerning: rgb(222, 156, 117);
@poor:       rgb(229, 208, 149);
@good:       rgb(201, 220, 136);
@great:      rgb(135, 219, 144);

@grey-0: #EEE;
@grey-1: #CCC;
@grey-2: #999;
@grey-3: #666;
@grey-4: #333;

@green: #8CC63F;

// These are not used
@first_click_color: yellow;
@second_click_color: blue;


/*
 * Parametric mixins
 */

.border-radius (@radius) 
{
  border-radius: @radius;
  -moz-border-radius: @radius;
  -webkit-border-radius: @radius;
}

.box-shadow (@x, @y, @blur, @color)
{
  -moz-box-shadow: @x @y @blur @color;
  -webkit-box-shadow: @x @y @blur @color;
  box-shadow: @x @y @blur @color;
}

.box-shadow-spread (@x, @y, @blur, @spread, @color)
{
  -moz-box-shadow: @x @y @blur @spread @color;
  -webkit-box-shadow: @x @y @blur @spread @color;
  box-shadow: @x @y @blur @spread @color;
}

.box-sh (@one, @two, @three)
{
  -moz-box-shadow: @one @two @three;
  -webkit-box-shadow: @one @two @three;
  box-shadow: @one @two @three;
}


.box-sh (@one, @two, @three, @four)
{
  -moz-box-shadow: @one @two @three @four;
  -webkit-box-shadow: @one @two @three @four;
  box-shadow: @one @two @three @four;
}


.box-sh (@one, @two, @three, @four, @five)
{
  -moz-box-shadow: @one @two @three @four @five;
  -webkit-box-shadow: @one @two @three @four @five;
  box-shadow: @one @two @three @four @five;
}


.box-sh (@one, @two, @three, @four, @five, @six)
{
  -moz-box-shadow: @one @two @three @four @five @six;
  -webkit-box-shadow: @one @two @three @four @five @six;
  box-shadow: @one @two @three @four @five @six;
}


/*
 * Main
 */

body
{
  font-size: @h2;
  background: #999 url("../images/noise.png");
}

body.server
{
  font-size: 100%;
}

p
{
  margin-bottom: 1em;
}

section
{
  .box-sh( 0 2px, 2.5px, rgba(0,0,0,0.1)); 
  padding: 10px;
  margin-bottom: 10px;
}

body.flash{
  background-color: @yellow;
}

.icon 
{
  cursor: pointer;
  margin-right: 10px;
}



table.disabled,
div.disabled
{
  .grid_element
  {
    color: @grey-1 !important;
  }
}

body.class 
{
  table.grid
  {
    .grid_element
    {
      font-family: Andika !important;
    }
  }
}
/* ... */

